--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -44,7 +44,7 @@ exclude:
    - README.md
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/images/banner.PNG"
+logo: "/assets/images/banner.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
