--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -113,7 +113,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2022 Naveen Durvasula. Distributed by an <a href=\"https://github.com/ndurvasula/OpenKPD/blob/master/LICENSE\">GNU General Public License v2.0.</a>"
+footer_content: "Copyright &copy; 2022 Naveen Durvasula. Distributed by a <a href=\"https://github.com/ndurvasula/OpenKPD/blob/master/LICENSE\">GNU General Public License v2.0.</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
